New version update

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,19 +3,305 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #f3f4f6;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #f3f4f6;
+    --foreground: #171717;
   }
+}
+
+* > * {
+  font-size: 14px;
+  user-select: none;
+  font-family: var(--font-gilroy) !important;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
+}
+
+.ant-segmented {
+  border-radius: 14px;
+}
+
+.ant-segmented .ant-segmented-item {
+  padding-inline: 5px;
+  padding-block: 1px;
+  border-radius: 12px;
+}
+
+.ant-segmented .ant-segmented-item-selected {
+  background-color: #f26522;
+  color: white;
+}
+
+.ant-segmented .ant-segmented-thumb {
+  background-color: #f26522;
+  border-radius: 12px;
+}
+
+.ant-input-affix-wrapper {
+  border-radius: 12px;
+  padding: 6px 14px;
+  transition: all 0.3s;
+}
+
+.ant-input-affix-wrapper .ant-input-prefix {
+  margin-inline-end: 10px;
+}
+
+.ant-input-outlined:focus,
+.ant-input-outlined:focus-within {
+  border-color: #f26522;
+  box-shadow: 0 0 0 2px rgba(243, 100, 33, 0.1);
+}
+
+.ant-input-outlined:hover {
+  border-color: #f26522;
+}
+
+.ant-form-item .ant-form-item-explain-error {
+  text-align: end;
+  /* margin-block-start: 2px; */
+  /* margin-block-end: 16px; */
+  font-size: 12px;
+}
+
+.ant-btn {
+  color: white;
+  background-color: #f26522;
+  border: none;
+  border-radius: 12px;
+  padding-inline: 32px;
+  padding-block: 16px;
+  font-weight: 700;
+}
+
+.back.ant-btn {
+  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
+  background-color: rgb(229 231 235 / var(--tw-text-opacity, 1));
+  border: none;
+  border-radius: 12px;
+  padding-inline: 32px;
+  padding-block: 16px;
+  font-weight: 700;
+}
+
+.nav-btn.ant-btn {
+  color: white;
+  background-color: #f26522;
+  border: none;
+  border-radius: 18px;
+  padding-inline: 18px;
+  padding-block: 18px;
+  font-weight: 700;
+}
+
+.no-inline.ant-btn {
+  color: white;
+  background-color: #f26522;
+  border: none;
+  border-radius: 12px;
+  padding-inline: 15px;
+  padding-block: 18px;
+  font-weight: 700;
+}
+
+.x-btn.ant-btn {
+  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
+  background-color: rgb(229 231 235 / var(--tw-text-opacity, 1));
+  border: none;
+  border-radius: 12px;
+  padding-inline: 7px;
+  padding-block: 16px;
+  font-weight: 700;
+}
+
+.ant-btn-variant-outlined:not(:disabled):not(.ant-btn-disabled):hover {
+  background: #ed1c45;
+  color: white;
+  border-color: none;
+  transition: all 0.3s;
+}
+
+.back.ant-btn-variant-outlined:not(:disabled):not(.ant-btn-disabled):hover {
+  background: #e3e3e3;
+  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
+  transition: all 0.3s;
+}
+
+.ant-select-single.ant-select-show-arrow .ant-select-selection-placeholder {
+  padding-inline-end: 45px;
+}
+
+@media (max-width: 639px) {
+  .ant-select-single.ant-select-show-arrow .ant-select-selection-placeholder {
+    padding-inline-end: 20px;
+  }
+}
+
+.ant-select-single .ant-select-selector .ant-select-prefix {
+  padding-inline-end: 7px;
+}
+
+.ant-select-single.ant-select-show-arrow .ant-select-selection-item {
+  font-weight: 500;
+}
+
+.ant-select-dropdown .ant-select-item {
+  font-weight: 500;
+  border-radius: 12px;
+}
+
+.ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-item {
+  font-weight: 600;
+}
+
+.ant-dropdown .ant-dropdown-menu {
+  border-radius: 12px;
+}
+
+.ant-divider-horizontal.no-margin {
+  margin: 0;
+}
+
+.ant-select-focused.ant-select-outlined:not(.ant-select-disabled):not(
+    .ant-select-customize-input
+  ):not(.ant-pagination-size-changer)
+  .ant-select-selector {
+  border-color: #f36421;
+}
+
+.ant-select-outlined:not(.ant-select-disabled):not(
+    .ant-select-customize-input
+  ):not(.ant-pagination-size-changer):hover
+  .ant-select-selector {
+  border-color: #f36421;
+}
+
+.ant-select-focused.ant-select-outlined:not(.ant-select-disabled):not(
+    .ant-select-customize-input
+  ):not(.ant-pagination-size-changer)
+  .ant-select-selector {
+  box-shadow: 0 0 0 2px rgba(243, 100, 33, 0.1);
+}
+
+.ant-select-single {
+  height: 36px;
+}
+
+.ant-select-selector {
+  padding: 16px !important;
+  border-radius: 12px !important;
+}
+
+.ant-modal .ant-modal-close {
+  inset-inline-end: 20px;
+  border-radius: 10px !important;
+}
+
+.ant-modal .ant-modal-title {
+  margin: 0;
+  color: rgba(0, 0, 0, 0.88);
+  font-weight: 800;
+  font-size: 15px;
+  line-height: 1.5;
+  word-wrap: break-word;
+}
+
+.ant-modal .ant-modal-content {
+  border-radius: 18px;
+}
+
+.ant-input-number {
+  border-radius: 12px !important;
+}
+
+.ant-input-number .ant-input-number-handler-wrap {
+  border-start-end-radius: 12px;
+  border-end-end-radius: 12px;
+}
+
+.ant-input-number-group .ant-input-number-group-addon:last-child {
+  border-radius: 12px;
+}
+
+.ant-input-number-outlined:focus-within {
+  border-color: #f36421;
+}
+
+.ant-input-number-outlined:hover {
+  border-color: #f36421;
+}
+
+.ant-input-number
+  .ant-input-number-handler:hover
+  .ant-input-number-handler-up-inner {
+  color: #f36421;
+}
+
+.ant-input-number
+  .ant-input-number-handler:hover
+  .ant-input-number-handler-down-inner {
+  color: #f36421;
+}
+
+.ant-divider-horizontal {
+  margin: 12px 0px;
+}
+
+.fnp.ant-form-item {
+  margin-bottom: 0px;
+}
+
+.ant-progress .ant-progress-steps-item-active {
+  border-radius: 3px;
+  width: 20px !important;
+}
+
+.ant-progress .ant-progress-steps-item {
+  border-radius: 3px;
+  width: 18px !important;
+  margin-inline: 1px;
+}
+
+.ant-progress .ant-progress-bg {
+  background: #f36421;
+}
+
+.ant-radio-wrapper .ant-radio-checked .ant-radio-inner {
+  border-color: #f36421;
+  background-color: #f36421;
+}
+
+.ant-radio-wrapper:hover .ant-radio-inner {
+  border-color: #f36421;
+}
+
+.ant-checkbox-checked .ant-checkbox-inner {
+  border-color: #f36421;
+  background-color: #f36421;
+}
+
+.ant-checkbox-wrapper:not(.ant-checkbox-wrapper-disabled):hover
+  .ant-checkbox-inner {
+  border-color: #f36421;
+}
+
+.ant-checkbox-wrapper:not(.ant-checkbox-wrapper-disabled):hover
+  .ant-checkbox-checked:not(.ant-checkbox-disabled)
+  .ant-checkbox-inner {
+  background-color: #f36421;
+  border-color: transparent;
+}
+
+textarea.ant-input {
+  padding: 8px 14px;
+  border-radius: 14px;
 }
