--- a/app/globals.css
+++ b/app/globals.css
@@ -518,3 +518,27 @@ textarea.ant-input {
 .ant-pagination .ant-pagination-item {
   margin-inline-end: 8px !important;
 }
+
+.ant-collapse > .ant-collapse-item > .ant-collapse-header {
+  padding: 0;
+}
+
+.ant-collapse .ant-collapse-content > .ant-collapse-content-box {
+  padding: 0px 4px;
+}
+
+.ant-collapse-content-box {
+  padding: 0px 4px 0px 4px !important;
+}
+
+.ant-timeline .ant-timeline-item-head {
+  background-color: transparent !important;
+}
+
+.ant-timeline .ant-timeline-item-last {
+  padding-bottom: 0;
+}
+
+.ant-timeline .ant-timeline-item-content {
+  inset-block-start: -10px;
+}
