--- a/app/globals.css
+++ b/app/globals.css
@@ -607,3 +607,39 @@ textarea.ant-input {
 .ant-message {
   top: 24px !important;
 }
+
+.ant-slider .ant-slider-mark-text {
+  line-height: 1.2;
+  padding-top: 6px;
+  font-size: 12px;
+}
+
+@media (max-width: 767px) {
+  .ant-slider .ant-slider-mark-text {
+    word-break: break-word;
+    white-space: normal;
+    width: 50px;
+    text-align: center;
+  }
+}
+
+.ant-slider .ant-slider-track {
+  background-color: #f59e0b;
+}
+
+.ant-slider:hover .ant-slider-track {
+  background-color: #f36421;
+}
+
+.ant-slider .ant-slider-dot-active {
+  border-color: #f36421;
+}
+
+.ant-slider:hover .ant-slider-dot-active {
+  border-color: #f36421;
+}
+
+.ant-slider-horizontal.ant-slider-with-marks {
+  margin-bottom: 32px;
+  margin-left: -12px;
+}
