--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,11 @@
   font-family: var(--font-gilroy) !important;
 }
 
+.ant-btn .anticon-loading {
+  top: -2.5px;
+  position: relative;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
@@ -27,27 +32,28 @@ body {
 }
 
 .ant-segmented {
-  border-radius: 14px;
+  border-radius: 99px;
 }
 
 .ant-segmented .ant-segmented-item {
   padding-inline: 5px;
   padding-block: 1px;
-  border-radius: 12px;
+  border-radius: 99px;
 }
 
 .ant-segmented .ant-segmented-item-selected {
   background-color: #f26522;
   color: white;
+  font-weight: 800;
 }
 
 .ant-segmented .ant-segmented-thumb {
   background-color: #f26522;
-  border-radius: 12px;
+  border-radius: 99px;
 }
 
 .ant-input-affix-wrapper {
-  border-radius: 12px;
+  border-radius: 99px;
   padding: 6px 14px;
   transition: all 0.3s;
 }
@@ -655,6 +661,7 @@ textarea.ant-input {
   line-height: 1.2;
   padding-top: 6px;
   font-size: 12px;
+  width: 70px !important;
 }
 
 @media (max-width: 767px) {
@@ -685,4 +692,84 @@ textarea.ant-input {
 .ant-slider-horizontal.ant-slider-with-marks {
   margin-bottom: 32px;
   margin-left: -12px;
+}
+
+.grd-btn.ant-btn {
+  font-weight: 800 !important;
+  color: #f36421 !important;
+  position: relative !important;
+  background: linear-gradient(
+    to bottom right,
+    rgba(243, 100, 33, 0.2),
+    rgba(243, 100, 33, 0.2)
+  ) !important;
+  border-radius: 9999px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  border: 1px solid rgba(243, 100, 33, 0.1) !important;
+  padding: 8px 16px !important;
+  transition: all 0.3s !important;
+}
+
+.grd-btn.ant-btn:hover,
+.grd-btn.ant-btn-variant-outlined:not(:disabled):not(.ant-btn-disabled):hover {
+  background: linear-gradient(
+    to bottom right,
+    rgba(243, 100, 33, 0.3),
+    rgba(243, 100, 33, 0.3)
+  ) !important;
+  color: #f36421 !important;
+  border-color: transparent !important;
+  border: 1px solid rgba(243, 100, 33, 0.3) !important;
+}
+
+.grd-btn.ant-btn::before {
+  content: "";
+  position: absolute;
+  inset: -2px;
+  background: linear-gradient(
+    to bottom right,
+    rgba(243, 100, 33, 0.5),
+    rgba(243, 100, 33, 0.5)
+  );
+  border-radius: 9999px;
+  filter: blur(4px);
+  opacity: 0.3;
+  z-index: -1;
+  transition: opacity 0.3s;
+}
+
+.grd-btn.ant-btn:hover::before {
+  opacity: 0.4;
+}
+
+.grd-btn.ant-btn .btn-icon {
+  margin-right: 6px;
+}
+
+.back-btn.ant-btn {
+  font-weight: 700 !important;
+  border-radius: 9999px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  padding: 8px 16px !important;
+  transition: all 0.3s !important;
+  position: relative !important;
+
+  color: #4b5563 !important;
+  background: #ffffff !important;
+  border: 1px solid #d1d5db !important;
+}
+
+.back-btn.ant-btn:hover,
+.back-btn.ant-btn-variant-outlined:not(:disabled):not(.ant-btn-disabled):hover {
+  color: #4b5563 !important;
+  background: #f9fafb !important;
+  border-color: #9ca3af !important;
+}
+
+.back-btn.ant-btn .btn-icon {
+  margin-right: 6px;
 }
