--- a/app/globals.css
+++ b/app/globals.css
@@ -311,6 +311,11 @@ body {
 
 .ant-input {
   border-radius: 12px;
+  font-size: 16px !important;
+  transform-origin: top left;
+  width: 114.285714%;
+  transform: scale(0.875);
+  margin-bottom: -4.5px;
 }
 
 .ant-table-wrapper table tr th.ant-table-selection-column,
@@ -356,11 +361,6 @@ body {
 
 .ant-select-single {
   height: 36px;
-}
-
-.ant-select-selector {
-  padding: 16px !important;
-  border-radius: 12px !important;
 }
 
 .ant-modal .ant-modal-close {
@@ -464,8 +464,15 @@ body {
 }
 
 textarea.ant-input {
-  padding: 8px 14px;
-  border-radius: 14px;
+  padding: 12px 16px;
+  border-radius: 18px;
+  font-size: 16px !important;
+  transform-origin: top left;
+  width: 114.285714% !important;
+  max-width: 114.3% !important;
+  transform: scale(0.875);
+  margin-bottom: -16.5px;
+  line-height: 1.35;
 }
 
 .ant-picker-dropdown .ant-picker-cell-disabled .ant-picker-cell-inner {
@@ -772,4 +779,9 @@ textarea.ant-input {
 
 .back-btn.ant-btn .btn-icon {
   margin-right: 6px;
+}
+
+.ant-select-selector {
+  padding: 16px !important;
+  border-radius: 99px !important;
 }
