--- a/app/globals.css
+++ b/app/globals.css
@@ -204,7 +204,7 @@ body {
 }
 
 .link-btn-2.ant-btn {
-  color: rgba(239, 68, 68, 0.7);
+  color: #f36421;
   background-color: transparent;
   box-shadow: none;
   padding-inline: 0px;
@@ -216,7 +216,7 @@ body {
 .link-btn-2.ant-btn-variant-outlined:not(:disabled):not(
     .ant-btn-disabled
   ):hover {
-  color: rgba(239, 68, 68);
+  color: rgba(239, 68, 68) !important;
   background-color: transparent;
   transition: all 0.3s;
 }
@@ -715,7 +715,7 @@ textarea.ant-input {
   align-items: center !important;
   justify-content: center !important;
   border: 1px solid rgba(243, 100, 33, 0.1) !important;
-  padding: 8px 16px !important;
+  padding: 8px 16px;
   transition: all 0.3s !important;
 }
 
@@ -784,4 +784,84 @@ textarea.ant-input {
 .ant-select-selector {
   padding: 16px !important;
   border-radius: 99px !important;
+}
+
+.ant-select,
+.ant-select-selector,
+.ant-input-affix-wrapper {
+  touch-action: manipulation !important;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.arc-spinner {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  border: 5px solid rgba(243, 100, 33, 0.2);
+  border-top-color: #f36421;
+  animation: spin 1s linear infinite;
+}
+
+.grd-btn-2.ant-btn {
+  font-weight: 800 !important;
+  color: #374151 !important;
+  position: relative !important;
+  background: linear-gradient(
+    to right,
+    rgb(156 163 175 / 0.2),
+    rgb(229 231 235)
+  ) !important;
+  border-radius: 9999px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  border: 1px solid rgb(17 24 39 / 0.1) !important;
+  padding: 8px 16px;
+  transition: all 0.3s !important;
+}
+
+.grd-btn-2.ant-btn:hover,
+.grd-btn-2.ant-btn-variant-outlined:not(:disabled):not(
+    .ant-btn-disabled
+  ):hover {
+  background: linear-gradient(
+    to right,
+    rgb(156 163 175 / 0.3),
+    rgb(156 163 175 / 0.4)
+  ) !important;
+  color: #374151 !important;
+  border-color: transparent !important;
+  border: 1px solid rgb(17 24 39 / 0.1) !important;
+}
+
+.grd-btn-2.ant-btn::before {
+  content: "";
+  position: absolute;
+  inset: -2px;
+  background: linear-gradient(
+    to bottom right,
+    rgb(156 163 175 / 0.5),
+    rgb(156 163 175 / 0.5)
+  );
+  border-radius: 9999px;
+  filter: blur(4px);
+  opacity: 0.3;
+  z-index: -1;
+  transition: opacity 0.3s;
+}
+
+.grd-btn-2.ant-btn:hover::before {
+  opacity: 0.4;
+}
+
+.grd-btn-2.ant-btn .btn-icon {
+  margin-right: 6px;
 }
