--- a/app/globals.css
+++ b/app/globals.css
@@ -926,21 +926,15 @@ textarea.ant-input {
   }
 }
 
-@keyframes marquee-reverse {
-  0% {
-    transform: translateX(-50%);
-  }
-  100% {
-    transform: translateX(0);
-  }
-}
-
 .animate-marquee {
-  animation: marquee 30s linear infinite;
+  display: flex;
+  animation: marquee 20s linear infinite;
 }
 
-.animate-marquee-reverse {
-  animation: marquee-reverse 35s linear infinite;
+@media (max-width: 640px) {
+  .animate-marquee {
+    animation-duration: 5s;
+  }
 }
 
 .animate-marquee:hover,
